tests/baselines/reference/constructorArgsErrors3.errors.txt
==== tests/cases/compiler/constructorArgsErrors3.ts (1 errors) ====
    class foo {
        constructor (public public a: number) {
                            ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
        }
    }
    